# ClinicFlow

./: CMakeLists.txt  README.md  citaMedica.h  gestorArchivos.h  main.cpp  medico.h  medicos.txt  paciente.h  pacientes.txt  reporte.h  servicio.h  servicios.txt
output/: citas.txt  medicos.txt  medicos_por_servicio.txt  pacientes.txt
output/backup/: pacientes_backup_2025-01-20_00-18-07.bak  pacientes_cronicos_backup_2025-01-20_00-18-07.bak
